修改流程审批列表样式

--- a/FTWeb/View_Mobile/UI/UI_LCSP_LCLIST.html
+++ b/FTWeb/View_Mobile/UI/UI_LCSP_LCLIST.html
@@ -27,7 +27,7 @@
         <div class="content infinite-scroll infinite-scroll-bottom" data-distance="50">
             
             <div class="list-block" style="margin:0" ms-repeat-lb="LCLBData">
-                <p style="padding: 5px;background-color: whitesmoke;margin:2px;padding-left:10px;border-left: 2px solid #49d2ad;">{{lb}}</p>
+                <p style="padding: 6px;background-color: whitesmoke;padding-left:10px;border-left: 2px solid #49d2ad;">{{lb}}</p>
                 <ul>
                     <li class="item-content item-link" ms-repeat-el="LCTypeData" ms-visible="el.RelatedTable==lb" ms-on-tap="vieww(el)">
                         <!--<div class="item-media" style="height:60px"><i class="icon icon-f7"></i></div>-->
