--- a/FTWeb/ViewV5/AppPage/LCSP/LCSPVIEW.html
+++ b/FTWeb/ViewV5/AppPage/LCSP/LCSPVIEW.html
@@ -9,7 +9,7 @@
             InitWigetData: function (strId) {
                 model.title = "自定义流程";
                 model.ShowColumns.pushArray(
-                [{ ColName: "ProcessName", ColText: "流程", IsSel: true},
+                [{ ColName: "ProcessName", ColText: "流程名称", IsSel: true},
                 { ColName: "ShenQingRen", ColText: "申请人", IsSel: true },
                 { ColName: "CRDate", ColText: "申请时间", IsSel: true }
                 ]);
