--- a/FTWeb/login.html
+++ b/FTWeb/login.html
@@ -252,7 +252,7 @@
                                     <label class="fl rememberme check">
                                         <input type="checkbox" id="isJZMM" checked="checked"><span style="color:#8b8b8b; font-size:14px;">保持登录</span>
                                     </label>
-                                    <a href="find-cold.html?type=1" class="fr findpass">忘记密码？</a>
+                                    <a href="find-cold.html?type=1" class="fr findpass hidden">忘记密码？</a>
                                 </p>
                                 <p class="login-end" style="margin-top:30px;">
                                     <a class="uppercase">登录</a>
@@ -268,7 +268,7 @@
                                 <div class="create-account" style="display:none;">
                                     <p>
 
-                                        <a href="###" id="register-btn">新用户注册</a>
+                                        <a href="###" id="register-btn"></a>
                                     </p>
                                 </div>
                             </li>
