添加夺宝活动管理

--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -104,6 +104,9 @@
                     <div ms-click="selyyType('RLZY',this)">
                         <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>人力资源</a>
                     </div>
+                    <div ms-click="selyyType('YXHD',this)">
+                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>营销活动</a>
+                    </div>
                 </div>
             </div>
         </div>
