--- a/FTWeb/ViewV5/AppPage/DBHD/DBHD.html
+++ b/FTWeb/ViewV5/AppPage/DBHD/DBHD.html
@@ -93,7 +93,7 @@
                 <li class="add-item add-widthall">
                     <label class="add-item-label">活动描述</label>
                     <div class="add-ic">
-                        <textarea ms-duplex="modelData.Content" rows="2" class="span2 form-control"></textarea>
+                        <textarea ms-duplex="modelData.Content" rows="2" class="span2 form-control szhl_UEEDIT" umheight="200" id="conMS"></textarea>
                     </div>
                 </li>
                 <li class="add-item add-widthall">
