--- a/FTWeb/ViewV5/AppPage/DBHD/HDKHLIST.html
+++ b/FTWeb/ViewV5/AppPage/DBHD/HDKHLIST.html
@@ -1,4 +1,4 @@
-﻿<div ms-controller="HDZTLIST">
+﻿<div ms-controller="HDKHLIST">
     <!-- 添加按钮 -->
     <!-- 按条件选择 -->
     <div class="tab-filter-type">
@@ -40,17 +40,11 @@
                 <tr>
                     <th class="tc">序号
                     </th>
-                     <th>发起人
+                    <th>客户姓名
                     </th>
-                    <th>组团名称
+                    <th>手机号
                     </th>
-                    <th>发起时间
-                    </th>
-                    <th>需支付金额
-                    </th>
-                    <th>是否开奖
-                    </th>
-                    <th>开奖时间
+                    <th>创建时间
                     </th>
                     <th>操作
                     </th>
@@ -59,13 +53,9 @@
             <tbody>
                 <tr ms-repeat-el="tmpListData">
                     <td class=" tc">{{$index+1+page.pagecount*(page.pageindex-1)}}</td>
-                                        <td>{{el.fquserid}}</td>
-                    <td class="lk">{{ComFunJS.convstr(el.ztname,20) }}</td>
-                    <td>{{el.fqdate}}</td>
-                    <td>{{el.dzfje}}</td>
-                    <td>{{el.iskj}}</td>
-                    <td>{{el.kjtime|date("yyyy-MM-dd")}}</td>
-                    
+                    <td>{{el.name}}</td>
+                    <td>{{el.mobphone}}</td>
+                    <td>{{el.CRDate|date("yyyy-MM-dd HH:mm")}}</td>
                 </tr>
 
             </tbody>
@@ -97,7 +87,7 @@
 <script>
 
     var tempindex = avalon.define({
-        $id: "HDZTLIST",
+        $id: "HDKHLIST",
         starTime: "",
         endTime: "",
         tmpListData: [],
