--- a/FTWeb/View_Mobile/WX/hd/createteam.html
+++ b/FTWeb/View_Mobile/WX/hd/createteam.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,8 +31,9 @@
         <p class="mui-content-padded">您购买的是100元的夺奖码，需分享二维码邀请9人即可开奖，加油哦！！！</p>
       
         <div class="mui-button-row paddBottom">
-            <button class="btn_goods left" type="reset">取消</button>
-            <button class="btn_goods right" type="submit">确认</button>     
+            <button class="btn_goods left" type="button" onclick="history.back()">取消</button>
+            <!--<button class="btn_goods right" type="button">确认</button>-->     
+            <a class="btn_goods right" href="myteam.html">确认</a> 
         </div>
     </form>
 </body>
