--- a/FTWeb/View_Mobile/WX/hd/goods.html
+++ b/FTWeb/View_Mobile/WX/hd/goods.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,10 +26,15 @@
           <img class="mui-media-object teamErweima" src="images/banner1.jpg">
           <div class="title">我的商品码</div>
           <div class="mui-content-padded">1298473984735839840</div>
+          <div class="mui-content-padded">1298473984735839840</div>
+          <div class="mui-content-padded">1298473984735839840</div>
           <p class="goodssay">您可以凭此商码选择线下核销兑换此产品，但也可以选择参加夺宝中价值888元的大奖</p>
            <div>
              <a class="btn_goods left" href="">线下核销</a>
-             <a class="btn_goods right" href="createteam.html">参加夺宝</a>
+             <a class="btn_goods right" href="createteam.html">我要开团</a>
+          </div>
+          <div>
+              <a class="btn_goods left" href="buygoods.html" style="margin-top:10px;">购买商品码</a>
           </div>
       </div>
     
