--- a/FTWeb/View_Mobile/WX/hd/index.html
+++ b/FTWeb/View_Mobile/WX/hd/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -69,7 +69,7 @@
                             <p> 2. 超值年卡，一天不到一元钱，全年畅玩糖果世界，线上抢购原价998糖果年卡，现价299元，限量100张（糖果世界一年内无限次畅玩，不含游戏币）。</p>
                         </div>
                     </a>
-                    <a class="indexJoin" href="https://hd.faisco.cn/8970605/37/load.html?style=57">我要参与</a>
+                    <a class="indexJoin" href="dbqb.html">我要参与</a>
                 </div>
                 <div class="tabListUl">
                     <p><i class="mui-icon mui-icon-paperplane"></i>活动内容</p>
