--- a/FTWeb/ViewV5/AppPage/DBHD/HDZTLIST.html
+++ b/FTWeb/ViewV5/AppPage/DBHD/HDZTLIST.html
@@ -65,7 +65,7 @@
                 <tr ms-repeat-el="tmpListData">
                     <td class=" tc">{{$index+1+page.pagecount*(page.pageindex-1)}}</td>
                     <td>{{el.fquserid}}</td>
-                    <td class="lk">{{ComFunJS.convstr(el.ztname,20) }}</td>
+                    <td class="lk" ms-click="viewzt(el)">{{ComFunJS.convstr(el.ztname,20) }}</td>
                     <td>{{el.fqdate}}</td>
                     <td>{{el.iskj=='Y'?'是':'否'}}</td>
                     <td>{{el.kjtime|date("yyyy-MM-dd")}}</td>
@@ -99,10 +99,34 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">核销商品码</h4>
+                    <h4 class="modal-title">参与人员列表</h4>
                 </div>
                 <div class="modal-body">
-                 
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>序号
+                                </th>
+                                <th>手机号
+                                </th>
+                                <th>姓名
+                                </th>
+                                <th>商品码
+                                </th>
+                                <th>中奖状态
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ms-repeat-item="ztitemList">
+                                <td>{{$index+1}}</td>
+                                <td>{{item.mobphone}}</td>
+                                <td>{{item.name}}</td>
+                                <td>{{item.goodscode}}</td>
+                                <td>{{item.iszj}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -122,9 +146,9 @@
         seliskj: function (iskj) {
             tempindex.iskj = iskj;
             tempindex.GetLIST();
-
         },
         iskj: "N",
+        ztitemList: [],//组团人员
         InitWigetData: function () {
 
             tempindex.GetLIST();
@@ -173,6 +197,12 @@
                     });
                 }
             })
+        },
+        viewzt: function (item) {
+            tempindex.ztitemList = item.ZTRYList;
+            console.debug(item.ZTRYList)
+            $("#ztuserdiv").modal("show");
+
         }
     })
     //@ sourceURL=HDKHLIST.js;
