--- a/FTWeb/View_Mobile/WX/hd/jointeam.html
+++ b/FTWeb/View_Mobile/WX/hd/jointeam.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -33,7 +33,7 @@
         <p><i class="mui-icon mui-icon-flag"></i><span>XXX夺宝团</span><span>(队长:18888888888888)</span></p>
         <p class="mui-progressbar mui-progressbar-in width100" data-progress="60"><span style="transform: translate3d(-10%, 0px, 0px);"></span></p>
                 <p class="margin17">夺宝团还差<span style="color: #b44949;margin: 5px;">1</span>人就可以开奖了，请尽快加入凭手气，夺大奖！！！</p>
-        <div class="waitWinner left">待开奖</div><a class="waitWinner joinColor right" href="buygoods.html">加入夺宝</a>
+        <div class="waitWinner left">待开奖</div><a class="waitWinner joinColor right" href="goods.html">加入夺宝</a>
 
     </div>
     <a class="getJoin bottomFix bottomF" href="dbqb.html">我要开团</a>
